--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@polymer/paper-card": "^3.0.1",
-    "@webcomponents/webcomponentsjs": "^2.2.1",
-    "lit-element": "^v2.0.0-rc.2",
-    "lit-html": "^0.14.0"
+    "@vaadin/router": "^1.2.0",
+    "@vaadin/vaadin-tabs": "^2.1.1",
+    "@webcomponents/webcomponentsjs": "^2.2.3",
+    "lit-element": "2.0.0-rc.2",
+    "lit-html": "1.0.0-rc.2",
+    "pwa-helpers": "^0.9.0"
   }
 }
