--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "open-wc-lit-html-basics",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start": "owc-dev-server -o"
+  },
   "dependencies": {
     "@polymer/paper-card": "^3.0.1",
     "@vaadin/router": "^1.2.0",
@@ -10,5 +13,8 @@
     "lit-element": "2.0.0-rc.5",
     "lit-html": "1.0.0-rc.2",
     "pwa-helpers": "^0.9.0"
+  },
+  "devDependencies": {
+    "owc-dev-server": "^0.1.1"
   }
 }
