--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@polymer/paper-card": "^3.0.1",
     "@vaadin/router": "^1.2.0",
     "@vaadin/vaadin-tabs": "^2.1.1",
-    "@webcomponents/webcomponentsjs": "^2.2.3",
-    "lit-element": "2.0.0-rc.5",
-    "lit-html": "1.0.0-rc.2",
+    "@webcomponents/webcomponentsjs": "^2.2.6",
+    "lit-element": "^2.0.1",
+    "lit-html": "^1.0.0",
     "pwa-helpers": "^0.9.0"
   },
   "devDependencies": {
